--- a/subsonic-stable/Dockerfile
+++ b/subsonic-stable/Dockerfile
@@ -42,10 +42,10 @@ RUN zypper --non-interactive ar -f -n packman http://ftp.gwdg.de/pub/linux/misc/
   && ls /usr/lib/locale | grep -ve "en_CA*\|en_US*" | awk '{if(system("[ -f "$1" ]") == 0) {print $1} }' | xargs rm -rf \
   && find /usr/share/locale -type f -name '*.mo' | grep -ve "en_US*"  | awk '{if(system("[ -f "$1" ]") == 0) {print $1} }' | xargs rm \
   && zypper cc --all \
-  &&  rm -rf /usr/share/{man,doc,info,gnome/help} || true \
-  && rm -rf /var/cache/zypp* || true \
-  && rm -rf /tmp/* || true \
-  && rm -rf /var/log/* || true
+  && ( rm -rf /usr/share/{man,doc,info,gnome/help} || true ) /
+  && ( rm -rf /var/cache/zypp* || true ) /
+  && ( rm -rf /tmp/* || true ) /
+  && ( rm -rf /var/log/* || true )
 
 COPY root /
 ENTRYPOINT ["/init"]
